--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=eletronicCommercer
-spring.datasource.url=jdbc:mysql://172.18.0.2:3306/commerce
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url={SPRING_DATASOURCE_URL}
+spring.datasource.username={SPRING_DATASOURCE_USERNAME}
+spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
