--- a/script/docker-compose.yaml
+++ b/script/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       timeout: 20s
       retries: 10
   commerce:
-    build: .
+    build: ..
     restart: always
     depends_on:
       mysql:
