--- a/script/docker-compose.yaml
+++ b/script/docker-compose.yaml
@@ -5,13 +5,15 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: commerce
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: [ "CMD", "mysqladmin", "-uroot", "-proot",  "ping", "-h", "localhost" ]
       interval: 30s
       timeout: 20s
       retries: 10
   commerce:
-    build: ..
+    build: ../.
     restart: always
     depends_on:
       mysql:
